<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".FavoriteMemories">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#FFC107"
        android:backgroundTint="#FFC107" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingVertical="15dp"
        android:text="@string/favorite_memories_title"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="48sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#FFC107"
        android:backgroundTint="#FFC107" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/memTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF6F00"
            android:backgroundTint="#DD3113"
            android:fontFamily="@font/crimson_text"
            android:text="@string/sanchez_concert_title"
            android:textAlignment="center"
            android:textColor="#320504"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subjectLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F2E0B2"
            android:backgroundTint="#FFD54F"
            android:text="@string/sanchez_concert_subject"
            android:textAlignment="center"
            android:textColor="#5A0909"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/memory_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="0"
                android:contentDescription="@string/sanchez_concert_image"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/sanchez_concert" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#810000"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:scrollbars="vertical"
                android:text="@string/sanchez_concert_description"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/memTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:backgroundTint="#FF0000"
            android:fontFamily="@font/crimson_text"
            android:text="@string/camaro_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subjectLine2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:text="@string/camaro_subject"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/memory_image2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="0"
                android:contentDescription="@string/camaro_image"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/camaro" />

            <TextView
                android:id="@+id/description2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:scrollbars="vertical"
                android:text="@string/camaro_description"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/memTitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:backgroundTint="#663605"
            android:fontFamily="@font/crimson_text"
            android:textAlignment="center"
            android:text="@string/making_friends_title"
            android:textColor="#FFC9C9"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subjectLine3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B71C1C"
            android:backgroundTint="#EA0000"
            android:text="@string/making_friends_subject"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/memory_image3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="0"
                android:contentDescription="@string/dk_image"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/dk" />

            <TextView
                android:id="@+id/description3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F8C477"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:scrollbars="vertical"
                android:text="@string/making_friends_description"
                android:textColor="#753513"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/home_page_title"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>