<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".HomePage">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#FFC107"
        android:backgroundTint="#FFC107" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingVertical="15dp"
        android:text="@string/home_page_title"
        android:textColor="#FFC107"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#FFC107"
        android:backgroundTint="#FFC107" />

    <TextView
        android:id="@+id/welcomeUserTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingVertical="15dp"
        android:text=""
        android:textColor="#FFC107"
        android:textAlignment="center"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/cover_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/accountSettingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/account_settings_title"
            android:textAlignment="center"
            android:backgroundTint="#FFC107"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/favoriteMusicButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/favorite_music_title"
            android:textAlignment="center"
            android:backgroundTint="#FFC107"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bucketListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/bucket_list_title"
            android:textAlignment="center"
            android:backgroundTint="#FFC107"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/favoriteMemoriesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/favorite_memories_title"
            android:textAlignment="center"
            android:backgroundTint="#FFC107"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/helpfulLinksButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/helpful_links_title"
            android:textAlignment="center"
            android:backgroundTint="#FFC107"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-smallcaps"
            android:text="back"
            android:textAlignment="center"
            android:textColor="#FFC107"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>