<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Login">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#FFC107"
        android:backgroundTint="#FFC107" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingVertical="15dp"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="48sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/black"
        android:backgroundTint="#FFC107" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="10dp"
        android:orientation="horizontal"
        android:paddingTop="200dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingHorizontal="15dp"
            android:text="@string/username_prompt"
            android:textColor="#FFC107"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editUsernameLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:capitalize="none"
            android:ems="10"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:maxLength="5"
            android:textAlignment="center"
            android:textColor="#FFF392"
            android:textColorHint="#605757"
            android:textCursorDrawable="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/white"
        android:backgroundTint="#FFC107" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingHorizontal="15dp"
            android:text="@string/password_prompt"
            android:textColor="#FFC107"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPasswordLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLength="8"
            android:password="true"
            android:textAlignment="center"
            android:textColor="#FFF392"
            android:textColorHint="#605757"
            android:textCursorDrawable="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#FFC107"
        android:backgroundTint="#FFC107" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <Button
        android:id="@+id/submitLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:backgroundTint="#FFC107"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>