<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".SignUp">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#FFC107"
        android:backgroundTint="#FFC107" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingVertical="15dp"
        android:text="@string/sign_up_title"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="48sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider0"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/black"
        android:backgroundTint="#FFC107" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingLeft="15dp"
            android:paddingRight="35dp"
            android:text="name:"
            android:textColor="#FFC107"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter Name"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#FFF392"
            android:textColorHint="#605757"
            android:textCursorDrawable="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/black"
        android:backgroundTint="#FFC107" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingHorizontal="15dp"
            android:textColor="#FFC107"
            android:text="gender:"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editGender"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter gender"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#FFF392"
            android:textColorHint="#605757"
            android:textCursorDrawable="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/black"
        android:backgroundTint="#FFC107" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingHorizontal="15dp"
            android:text="age:"
            android:textColor="#FFC107"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editAge"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="#"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#FFF392"
            android:textColorHint="#605757"
            android:textCursorDrawable="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/black"
        android:backgroundTint="#FFC107" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingHorizontal="15dp"
            android:text="address:"
            android:textColor="#FFC107"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Mailing or Billing"
            android:inputType="textPostalAddress"
            android:textAlignment="center"
            android:textColor="#FFF392"
            android:textColorHint="#605757"
            android:textCursorDrawable="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/black"
        android:backgroundTint="#FFC107" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingHorizontal="15dp"
            android:text="@string/username_prompt"
            android:textColor="#FFC107"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:capitalize="none"
            android:ems="10"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:maxLength="5"
            android:textAlignment="center"
            android:textColor="#FFF392"
            android:textColorHint="#605757"
            android:textCursorDrawable="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF392"
        android:fontFamily="sans-serif"
        android:paddingVertical="5dp"
        android:text="@string/username_requirements"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/white"
        android:backgroundTint="#FFC107" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingHorizontal="15dp"
            android:text="@string/password_prompt"
            android:textColor="#FFC107"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLength="8"
            android:password="true"
            android:textAlignment="center"
            android:textColor="#FFF392"
            android:textColorHint="#605757"
            android:textCursorDrawable="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF392"
        android:fontFamily="sans-serif"
        android:paddingHorizontal="70dp"
        android:paddingVertical="5dp"
        android:text="@string/password_requirements"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#FFC107"
        android:backgroundTint="#FFC107" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <Button
            android:id="@+id/submitSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#FFC107"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/sign_up_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</LinearLayout>